--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PIOMS</title>
   </head>
-  <body>
+  <body class="fb">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+<style>
+    .fb{
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: auto;
+        height: auto;
+        margin: 0;
+        padding: 0;
+        font-family: 'Helvetica', 'Arial', sans-serif;
+        color: #666;
+        font-size: 12px;
+        box-sizing: border-box;
+        min-width: 1218px;
+    }
+</style>
